--- a/gabba_tracker.html
+++ b/gabba_tracker.html
@@ -86,6 +86,8 @@
       background: #e7f7e7; /* light green */
     }
   </style>
+  <!-- Excel parser for reading example.xlsx when hosted -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body>
 
@@ -168,7 +170,7 @@
   </div>
 
   <script>
-    // Using built-in example data only (upload disabled)
+    // Prefer local example.xlsx if available when hosted; otherwise use built-in example
     // === DEFAULT EXAMPLE DATA (used when no local save or CSV loaded) ===
     const defaultOrders = [
       {
@@ -532,9 +534,9 @@
     }
 
     function resetAll() {
-      if (!confirm("Restart shift from the example sheet? This discards current progress.")) return;
-      const base = defaultOrders;
-      orders = base.map((o, i) => ({ ...o, _seq: i, _id: undefined, baselineScheduledTime: o.scheduledTime || '' }));
+      if (!confirm("Restart from template? This discards current progress.")) return;
+      const base = (templateOrders && templateOrders.length) ? templateOrders : defaultOrders;
+      orders = base.map((o, i) => ({ ...o, _seq: i, _id: undefined, baselineScheduledTime: (o.baselineScheduledTime != null ? o.baselineScheduledTime : (o.scheduledTime || '')) }));
       orderUidCounter = 1; // restart ID counter
       ensureOrderIds(orders);
       ensureBaselines(orders);
@@ -621,7 +623,57 @@
       return result;
     }
 
-    // XLSX/CSV upload removed per request; using built-in example only.
+    // Auto-load example.xlsx if present (first sheet): columns Box, Food, Pax, Scheduled Time
+    async function tryLoadXlsx() {
+      try {
+        if (typeof XLSX === 'undefined') return null;
+        const resp = await fetch('example.xlsx', { cache: 'no-store' });
+        if (!resp.ok) return null;
+        const buf = await resp.arrayBuffer();
+        const wb = XLSX.read(buf, { type: 'array' });
+        const sheetName = wb.SheetNames[0];
+        if (!sheetName) return null;
+        const ws = wb.Sheets[sheetName];
+        const rows = XLSX.utils.sheet_to_json(ws, { header: 1, defval: '' });
+        if (!rows || rows.length === 0) return null;
+
+        const header = rows[0].map(h => String(h).trim().toLowerCase());
+        const findIdx = (cands) => cands.map(n => header.indexOf(n)).find(i => i >= 0);
+        const idx = {
+          box: findIdx(['box', 'box #', 'box no', 'box number']),
+          food: findIdx(['food', 'item', 'menu']),
+          pax: findIdx(['pax', 'qty', 'quantity', 'count']),
+          scheduledTime: findIdx(['scheduled time', 'time', 'scheduled', 'serve at', 'serve time'])
+        };
+
+        const dataRows = rows.slice(1).filter(r => r && r.some(cell => String(cell).trim() !== ''));
+        const list = [];
+        dataRows.forEach((r) => {
+          const boxVal = idx.box != null ? r[idx.box] : r[0];
+          const foodVal = idx.food != null ? r[idx.food] : r[1];
+          const paxVal = idx.pax != null ? r[idx.pax] : r[2];
+          const timeRaw = idx.scheduledTime != null ? r[idx.scheduledTime] : r[3];
+
+          const box = Number(String(boxVal || '').replace(/[^0-9]/g, ''));
+          const food = String(foodVal || '').trim();
+          const pax = Number(paxVal) || 1;
+          const time = normalizeTimeString(String(timeRaw || ''));
+          if (!box || !food) return;
+          list.push({
+            box,
+            food,
+            pax,
+            scheduledTime: isValidTime(time) ? time : '',
+            timeReceived: null,
+            timeGiven: null
+          });
+        });
+        return list;
+      } catch (e) {
+        console.warn('Failed to load example.xlsx', e);
+        return null;
+      }
+    }
 
     function renderOrdersTable() {
       const tbody = document.querySelector("#ordersTable tbody");
@@ -834,24 +886,35 @@
     document.getElementById('modalCancelBtn').addEventListener('click', () => closeModal());
     document.getElementById('modalSaveBtn').addEventListener('click', () => saveArrivalEdits());
 
-    // Bootstrap state: localStorage > default data
-    const saved = loadFromLocal();
-    let initialOrders;
-    if (saved && Array.isArray(saved.orders)) {
-      initialOrders = saved.orders;
-      attendance = saved.attendance || buildInitialAttendance(initialOrders);
-      // Force template to built-in example every time
-      templateOrders = defaultOrders.slice();
-    } else {
-      initialOrders = defaultOrders.slice();
-      attendance = buildInitialAttendance(initialOrders);
-      templateOrders = defaultOrders.slice();
-    }
-    orders = initialOrders.map((o, i) => ({ ...o, _seq: i, baselineScheduledTime: (o.baselineScheduledTime != null ? o.baselineScheduledTime : (o.scheduledTime || '')) }));
-    ensureOrderIds(orders);
-    ensureBaselines(orders);
-    renderAll();
-    setActiveTab('attendance');
+    // Bootstrap state: localStorage > example.xlsx > default data
+    (async function init() {
+      const saved = loadFromLocal();
+      let initialOrders;
+      if (saved && Array.isArray(saved.orders)) {
+        initialOrders = saved.orders;
+        attendance = saved.attendance || buildInitialAttendance(initialOrders);
+        templateOrders = saved.template && Array.isArray(saved.template) && saved.template.length
+          ? saved.template
+          : defaultOrders.slice();
+      } else {
+        const xlsxOrders = await tryLoadXlsx();
+        if (xlsxOrders && xlsxOrders.length) {
+          initialOrders = xlsxOrders.slice();
+          attendance = buildInitialAttendance(initialOrders);
+          templateOrders = xlsxOrders.slice();
+        } else {
+          initialOrders = defaultOrders.slice();
+          attendance = buildInitialAttendance(initialOrders);
+          templateOrders = defaultOrders.slice();
+        }
+      }
+
+      orders = initialOrders.map((o, i) => ({ ...o, _seq: i, baselineScheduledTime: (o.baselineScheduledTime != null ? o.baselineScheduledTime : (o.scheduledTime || '')) }));
+      ensureOrderIds(orders);
+      ensureBaselines(orders);
+      renderAll();
+      setActiveTab('attendance');
+    })();
 
     // On Day helpers
     function addOnDayItem() {
