--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Food Tracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 12px;
+      font-size: 20px;
+      line-height: 1.4;
+      -webkit-text-size-adjust: 100%;
     }
     h1 {
       margin-bottom: 10px;
@@ -19,9 +23,9 @@
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 6px 8px;
+      padding: 10px 12px;
       text-align: left;
-      font-size: 14px;
+      font-size: 18px;
     }
     th {
       background: #f0f0f0;
@@ -36,12 +40,15 @@
       background: #c8f7c5; /* light green */
     }
     button {
-      padding: 4px 8px;
-      font-size: 13px;
+      padding: 12px 14px;
+      font-size: 18px;
+      min-height: 44px;
+      min-width: 44px;
       cursor: pointer;
+      touch-action: manipulation;
     }
     .small {
-      font-size: 12px;
+      font-size: 16px;
       color: #666;
       margin-bottom: 8px;
     }
@@ -58,25 +65,38 @@
     .time-cell {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 10px;
     }
     .icon-btn {
-      padding: 2px 6px;
-      font-size: 12px;
+      padding: 10px 12px;
+      font-size: 18px;
       line-height: 1;
+      min-height: 44px;
+      min-width: 44px;
     }
     .muted {
       color: #999;
     }
-    /* Tabs spanning full width */
-    .tabs { display: flex; width: 100%; }
+    /* Tabs spanning full width; sticky on phones */
+    .tabs {
+      display: flex;
+      width: 100%;
+      position: sticky;
+      top: 0;
+      background: #fff;
+      z-index: 100;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      box-shadow: 0 1px 0 rgba(0,0,0,0.06);
+    }
     .tabs .tab-btn {
       flex: 1 1 0;
       text-align: center;
-      padding: 10px 6px;
+      padding: 14px 10px;
       background: #f7f7f7;
       border: 1px solid #ddd;
-      border-radius: 4px;
+      border-radius: 8px;
+      font-size: 18px;
     }
     .tabs .tab-btn + .tab-btn { margin-left: 6px; }
     /* Attendance row colors */
@@ -85,6 +105,36 @@
     }
     .att-here {
       background: #e7f7e7; /* light green */
+    }
+
+    /* Inputs sized for touch */
+    input, select {
+      font-size: 18px;
+      padding: 10px 12px;
+      min-height: 44px;
+    }
+
+    /* Make sections horizontally scrollable if tables overflow */
+    #ordersView, #attendanceView, #onDayView {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    /* Stack On Day form controls full-width on phone */
+    #onDayView > div {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 10px;
+    }
+    #onDayView label { width: 100%; }
+    #onDayView input { width: 100% !important; min-width: 0 !important; }
+    /* Optional desktop fallback (larger screens) */
+    @media (min-width: 900px) {
+      body { font-size: 16px; }
+      th, td { font-size: 14px; padding: 8px 10px; }
+      button, .icon-btn { font-size: 14px; padding: 8px 10px; min-height: 36px; }
+      input, select { font-size: 14px; padding: 8px 10px; min-height: 36px; }
+      .tabs .tab-btn { font-size: 14px; padding: 10px 8px; border-radius: 6px; }
     }
   </style>
   <!-- Excel parser for reading example.xlsx when hosted -->
