--- a/index.html
+++ b/index.html
@@ -528,6 +528,25 @@
       renderTable();
     }
 
+    // Long-press helper for editing times without buttons
+    function attachLongPress(el, handler, delayMs = 550) {
+      let timer = null;
+      const start = (e) => {
+        // only left mouse or touch
+        if (e.type === 'mousedown' && e.button !== 0) return;
+        // prevent row click from firing
+        e.stopPropagation();
+        if (timer) clearTimeout(timer);
+        timer = setTimeout(() => { handler(); timer = null; }, delayMs);
+      };
+      const clear = (e) => {
+        if (timer) { clearTimeout(timer); timer = null; }
+      };
+      el.addEventListener('touchstart', start, { passive: true });
+      el.addEventListener('mousedown', start);
+      ['touchend','touchcancel','mouseup','mouseleave'].forEach(ev => el.addEventListener(ev, clear));
+    }
+
     function isValidTime(str) {
       if (!str) return false;
       // Accept HH:MM (24h)
@@ -772,20 +791,17 @@
           <td>${order.food} <span class="pax-inline muted">(x${order.pax})</span></td>
           <td>
             <div class="time-cell">
-              <span class="${scheduled ? '' : 'muted'}">${scheduled || '—'}</span>
-              <button class="icon-btn" type="button" onclick="editTime(${index}, 'scheduledTime'); event.stopPropagation();">✏️</button>
+              <span class="lp ${scheduled ? '' : 'muted'}" data-field="scheduledTime" data-index="${index}" title="Long-press to edit">${scheduled || '—'}</span>
             </div>
           </td>
           <td>
             <div class="time-cell">
-              <span class="${received ? '' : 'muted'}">${received || '—'}</span>
-              <button class="icon-btn" type="button" onclick="editTime(${index}, 'timeReceived'); event.stopPropagation();" aria-label="Edit Received">✏️</button>
+              <span class="lp ${received ? '' : 'muted'}" data-field="timeReceived" data-index="${index}" title="Long-press to edit">${received || '—'}</span>
             </div>
           </td>
           <td>
             <div class="time-cell">
-              <span class="${given ? '' : 'muted'}">${given || '—'}</span>
-              <button class="icon-btn" type="button" onclick="editTime(${index}, 'timeGiven'); event.stopPropagation();" aria-label="Edit Given">✏️</button>
+              <span class="lp ${given ? '' : 'muted'}" data-field="timeGiven" data-index="${index}" title="Long-press to edit">${given || '—'}</span>
             </div>
           </td>
           <td>
@@ -793,6 +809,13 @@
           </td>
         `;
 
+        // Attach long-press handlers to time spans for in-place edits
+        const lps = tr.querySelectorAll('.lp');
+        lps.forEach(sp => {
+          const idx = Number(sp.getAttribute('data-index'));
+          const field = sp.getAttribute('data-field');
+          attachLongPress(sp, () => editTime(idx, field));
+        });
         tbody.appendChild(tr);
       });
     }
@@ -819,7 +842,7 @@
           <td>${att.arrivedAt || ''}</td>
           <td>
             ${att.arrived
-              ? `<button type="button" onclick="openViewChanges(${box}); event.stopPropagation();">View Time Changes</button>`
+              ? `<button type="button" onclick="openViewChanges(${box}); event.stopPropagation();">Times</button>`
               : `<button type=\"button\" onclick=\"openArrivalEditor(${box}); event.stopPropagation();\">Mark Here</button>`}
           </td>
         `;
@@ -900,6 +923,30 @@
       document.getElementById('modalOverlay').style.display = 'flex';
     }
 
+    function openEditTimes(box) {
+      currentModalBox = box;
+      setModalUI('edit', `Edit Times — Box ${box}`, true, 'Cancel');
+      const items = orders.filter(o => o.box === box).slice().sort((a,b)=>{
+        const fa = (a.food||'').toLowerCase();
+        const fb = (b.food||'').toLowerCase();
+        if (fa !== fb) return fa < fb ? -1 : 1;
+        return (a.pax||0) - (b.pax||0);
+      });
+      const container = document.getElementById('modalBody');
+      const lines = items.map((o) => {
+        const defaultTime = o.scheduledTime || '';
+        return `
+        <div style="display:flex; gap:8px; align-items:center; margin-bottom:6px;">
+          <div style="flex:1;">${o.food}</div>
+          <div style="width:50px; text-align:right;">x${o.pax}</div>
+          <label style="white-space:nowrap;">Time: <input type="time" value="${defaultTime}" data-id="${o._id}" style="min-width:110px;"></label>
+        </div>
+        `;
+      }).join('');
+      container.innerHTML = `<div class="small">Box ${box}: edit scheduled times for all items.</div>${lines}`;
+      document.getElementById('modalOverlay').style.display = 'flex';
+    }
+
     function openViewChanges(box) {
       currentModalBox = box;
       setModalUI('view', `Time Changes — Box ${box}`, false, 'Close');
@@ -908,7 +955,8 @@
                            .sort((a,b)=> (a.food||'').localeCompare(b.food||''));
       const container = document.getElementById('modalBody');
       if (!changed.length) {
-        container.innerHTML = `<div>No time changes for this box.</div>`;
+        container.innerHTML = `<div>No time changes for this box.</div>
+          <div style="margin-top:10px;"><button type="button" onclick="openEditTimes(${box});">Add Edits</button></div>`;
       } else {
         const rows = changed.map(o => `
           <div style="display:flex; gap:8px; align-items:center; margin-bottom:6px;">
@@ -916,7 +964,7 @@
             <div style="white-space:nowrap;">${fmtTime(o.baselineScheduledTime)} → <strong>${fmtTime(o.scheduledTime)}</strong></div>
           </div>
         `).join('');
-        container.innerHTML = rows;
+        container.innerHTML = rows + `<div style=\"margin-top:10px;\"><button type=\"button\" onclick=\"openEditTimes(${box});\">Add Edits</button></div>`;
       }
       document.getElementById('modalOverlay').style.display = 'flex';
     }
@@ -939,10 +987,12 @@
         if (item) item.scheduledTime = val || '';
       });
       // mark arrival time after checks
-      const rec = attendance[currentModalBox] || { arrived: false, arrivedAt: null };
-      rec.arrived = true;
-      if (!rec.arrivedAt) rec.arrivedAt = getCurrentTimeString();
-      attendance[currentModalBox] = rec;
+      if (currentModalMode === 'arrival') {
+        const rec = attendance[currentModalBox] || { arrived: false, arrivedAt: null };
+        rec.arrived = true;
+        if (!rec.arrivedAt) rec.arrivedAt = getCurrentTimeString();
+        attendance[currentModalBox] = rec;
+      }
       saveToLocal();
       closeModal();
       renderAll();
